fix bug report temp

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -25,9 +25,9 @@ body:
       label: 優先度・緊急度
       description: 業務への影響度を選択してください。
       options:
-        - 🔴 S: 業務が完全に停止しており、回避策がない（至急）
-        - 🟠 A: 重要な機能だが、代替手段で回避は可能
-        - 🟡 B: 業務に支障はないが、修正してほしい（軽微なバグ・表示崩れ）
+        - "🔴 S: 業務が完全に停止しており、回避策がない（至急）"
+        - "🟠 A: 重要な機能だが、代替手段で回避は可能"
+        - "🟡 B: 業務に支障はないが、修正してほしい（軽微なバグ・表示崩れ）"
     validations:
       required: true
 
@@ -70,7 +70,7 @@ body:
     attributes:
       label: アプリのバージョン
       description: ヘルプ > バージョン情報 に記載の数値を記入してください。
-      placeholder: 例: v1.0.2
+      placeholder: "例: v1.0.2"
     validations:
       required: true
 
